# autosub

./: .gitignore  CLAUDE.md  README.md  config.toml  config.toml.sample  planned_work.md  pyproject.toml
.github/workflows/: tests.yml
autosub/: cli.py
autosub/core/: cli_config.py  errors.py  profile.py  schemas.py  speaker_map.py  utils.py
autosub/extensions/: __init__.py  combined_classifier.py
profiles/: aoyama_nagisa.toml  concert_mc.toml  date_sayuri.toml  liella.toml  lieraji.toml  multi_seiyuu_radio.toml  proseka_aftertalk.toml  proseka_leoneed.toml  proseka_mmj.toml  proseka_n25.toml  proseka_vbs.toml  proseka_wxs.toml  solo_seiyuu_radio.toml  suzuhara_nozomi.toml
profiles/examples/: liella.toml  solo_seiyuu_radio.toml  (+1 more)
prompts/: date_sayuri.md  lieraji.md  multi_seiyuu_radio.md  proseka_aftertalk.md  proseka_leoneed.md  proseka_mmj.md  proseka_n25.md  proseka_vbs.md  proseka_wxs.md  solo_seiyuu_radio.md  suzuhara_nozomi.md
scripts/: freeze_frame_video.py
tests/: test_aegisub_metadata.py  test_cli.py  test_combined_classifier.py  test_core_vertex_errors.py  test_corners_classifier.py  test_corners_extension.py  test_corners_format_integration.py  test_diarization.py  test_errors.py  test_format_main.py  test_freeze_frame_video.py  test_llm_resolver.py  test_normalizer.py  test_postprocess_main.py  test_profile_extensions.py  test_report.py  test_split_after.py  test_split_utils.py  test_transcribe_api.py  test_transcribe_main.py  test_translate_chunker.py  test_translate_main.py  test_translate_vertex.py  test_utils.py  test_whisperx_backend.py
(+44 files in other folders)
